--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
+		"gsap": "^3.2.6",
 		"node-sass": "^4.14.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-id-swiper": "^3.0.0",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.1",
-		"redux": "^4.0.5"
+		"redux": "^4.0.5",
+		"styled-components": "^5.1.0",
+		"swiper": "^5.3.8"
 	},
 	"scripts": {
 		"start": "react-scripts start",
