--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^4.0.1",
+		"react-simple-image-slider": "^2.3.0",
 		"react-spring": "^8.0.27",
 		"redux": "^4.0.5",
 		"redux-logger": "^3.0.6",
 		"reselect": "^4.0.0",
 		"styled-components": "^5.1.0",
-		"swiper": "^6.7.5"
+		"swiper": "^7.3.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
