--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
 		"@testing-library/user-event": "^7.2.1",
 		"gsap": "^3.7.0",
 		"include-media": "^1.4.9",
-		"node-sass": "^4.14.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-id-swiper": "^4.0.0",
@@ -20,6 +19,7 @@
 		"redux": "^4.0.5",
 		"redux-logger": "^3.0.6",
 		"reselect": "^4.0.0",
+		"sass": "^1.45.1",
 		"styled-components": "^5.1.0",
 		"swiper": "^7.3.0"
 	},
